...
    }
  }

  return (
    <View style={{flex:1}}>
      <View style={{flex:1}}>
        <Title>Add Recipient</Title>
        <MethodSelector
          value={method} 
          onChange={setMethod}
        />
        <TextInput
          testID="recipient-name-input"
...
          placeholder="Name"
          onChangeText={(text: string) => {
            setRecipientName(text)
          }}
        />
        <TextInput
          testID="recipient-address-input"
          style={styles.input}
          placeholder="0x012E..."
          onChangeText={(text: string) => {
            setRecipientAddress(text)
          }}
        />
...
