appId: mindsgn.studio.pockt
---
- launchApp
- startRecording: share 
- runFlow:
        when:
            visible: "ENTER PIN"
        commands:
            - tapOn: "1"
            - tapOn: "1"
            - tapOn: "1"
            - tapOn: "1"
            - tapOn: "1"
- extendedWaitUntil:
    visible: "RECEIVE"
    timeout: 10000
- tapOn: "RECEIVE" 
- extendedWaitUntil:
    visible: "SHARE"
    timeout: 10000
- tapOn: "SHARE"
- stopRecording