appId: mindsgn.studio.pockt
---
- launchApp
- assertVisible:
    id: "home-screen"
- tapOn: "Transactions"
- assertVisible:
    id: "transactions-screen"
- tapOn: "Claim"
- assertVisible:
    id: "claim-screen"
- tapOn: "Settings"
- assertVisible:
    id: "settings-screen"
- tapOn:
    id: "open-claim-button"
- assertVisible:
    id: "claim-screen"
- tapOn: "Home"
- assertVisible:
    id: "home-screen"
